# cardgame

./: .gitignore  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/Controller/: Actions.cpp  Actions.h  GameController.cpp  GameController.h  MatchRule.h  UndoManager.cpp  UndoManager.h
Classes/Model/: CardTypes.cpp  CardTypes.h  GameBoard.cpp  GameBoard.h  IAction.h
Classes/View/: CardSprite.cpp  CardSprite.h  GameScene.cpp  GameScene.h  HandAreaView.cpp  HandAreaView.h  TableAreaView.cpp  TableAreaView.h
docs/: 项目交付文档.md
proj.android/app/jni/: Android.mk
proj.win32/: HelloCpp.vcxproj  HelloCpp.vcxproj.filters
